welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:14: error: type mismatch;
 found   : (x$1: Any)Boolean <and> (x: Double)Boolean <and> (x: Float)Boolean <and> (x: Long)Boolean <and> (x: Int)Boolean <and> (x: Char)Boolean <and> (x: Short)Boolean <and> (x: Byte)Boolean
 required: Boolean
		if ((compteur+getMondeLargeur()+1)%(getMondeLargeur()-1)==) {
                                                                        ^